--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,6 @@
 @import 'base/gradients';
 
 @import 'components/noBEM';
+@import 'components/custom-select';
+@import 'components/arrow';
+@import 'components/custom-option';
