--- a/src/sass/components/_noBEM.scss
+++ b/src/sass/components/_noBEM.scss
@@ -17,6 +17,10 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+select, option {
+  color: #000;
+}
+
 .container{
   background-color: #141e27;
   display: flex;
@@ -36,7 +40,7 @@ input[type=number] {
     margin-right: 5px;
     
     img{
-      max-width: 65px;
+      max-width: 50px;
     }
   }
   .title{
@@ -52,6 +56,7 @@ input[type=number] {
   .card{
     position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background: #283744;
@@ -81,6 +86,7 @@ input[type=number] {
       background: rgba(192, 192, 192, 0.27);
       border-radius: 10px;
       opacity: 0;
+      z-index: 2;
       transition: opacity 0.5s;
 
       &--loading{
@@ -91,7 +97,8 @@ input[type=number] {
 }
 
 
-.cont-input{
+.cont-input {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
